# docs-md

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  SourceParsingDesign.md  clippy.toml  justfile  rust-analyzer.toml  rustfmt.toml
.cargo/: config.toml
.source_1765210505/: manifest.json
.source_1765210505/autocfg-1.5.0/: Crate.toml
.source_1765210505/insta-1.44.3/: Crate.toml
.source_1765521767/: manifest.json
.source_1765633015/: manifest.json
.source_1765633015/rustdoc-types-0.57.0/: .cargo_vcs_info.json  COMMIT.txt  Cargo.toml.orig  Crate.toml  README.md  clgen.sh  update.sh
benches/: benchmarks.rs
docs/: SUMMARY.md
docs/addr2line/: index.md
docs/adler2/: index.md
docs/aho_corasick/: index.md
docs/allocator_api2/: index.md
docs/anstream/: index.md
docs/anstyle/: index.md
docs/anstyle_parse/: index.md
docs/anstyle_query/: index.md
docs/backtrace/: index.md
docs/backtrace_ext/: index.md
docs/base64/: index.md
docs/bitflags/: index.md
docs/bytes/: index.md
docs/castaway/: index.md
docs/cfg_if/: index.md
docs/clap/: index.md
docs/clap_builder/: index.md
docs/clap_derive/: index.md
docs/clap_lex/: index.md
docs/colorchoice/: index.md
docs/compact_str/: index.md
docs/console/: index.md
docs/crc32fast/: index.md
docs/crossbeam_deque/: index.md
docs/crossbeam_epoch/: index.md
docs/crossbeam_utils/: index.md
docs/docs_md/: index.md
docs/either/: index.md
docs/equivalent/: index.md
docs/flate2/: index.md
docs/foldhash/: index.md
docs/fs_err/: index.md
docs/getrandom/: index.md
docs/gimli/: index.md
docs/hashbrown/: index.md
docs/heck/: index.md
docs/http/: index.md
docs/httparse/: index.md
docs/indicatif/: index.md
docs/is_ci/: index.md
docs/is_terminal_polyfill/: index.md
docs/itoa/: index.md
docs/lazy_static/: index.md
docs/libc/: index.md
docs/log/: index.md
docs/matchers/: index.md
docs/memchr/: index.md
docs/miette/: index.md
docs/miette_derive/: index.md
docs/miniz_oxide/: index.md
docs/nu_ansi_term/: index.md
docs/object/: index.md
docs/once_cell/: index.md
docs/owo_colors/: index.md
docs/pathdiff/: index.md
docs/percent_encoding/: index.md
docs/pin_project_lite/: index.md
docs/portable_atomic/: index.md
docs/proc_macro2/: index.md
docs/quote/: index.md
docs/rayon/: index.md
docs/rayon_core/: index.md
docs/regex/: index.md
docs/regex_automata/: index.md
docs/regex_syntax/: index.md
docs/ring/: index.md
docs/rustc_demangle/: index.md
docs/rustdoc_types/: index.md
docs/rustix/: index.md
docs/rustls/: index.md
docs/rustls_pki_types/: index.md
docs/rustversion/: index.md
docs/ryu/: index.md
docs/same_file/: index.md
docs/serde/: index.md
docs/serde_core/: index.md
docs/serde_derive/: index.md
docs/serde_json/: index.md
docs/sharded_slab/: index.md
docs/simd_adler32/: index.md
docs/smallvec/: index.md
docs/static_assertions/: index.md
docs/strsim/: index.md
docs/subtle/: index.md
docs/supports_color/: index.md
docs/supports_hyperlinks/: index.md
docs/supports_unicode/: index.md
docs/syn/: index.md
docs/terminal_size/: index.md
docs/textwrap/: index.md
docs/thiserror/: index.md
docs/thiserror_impl/: index.md
docs/thread_local/: index.md
docs/tinyvec/: index.md
docs/tinyvec_macros/: index.md
docs/tracing/: index.md
docs/tracing_attributes/: index.md
docs/tracing_core/: index.md
docs/tracing_log/: index.md
docs/tracing_subscriber/: index.md
docs/unicode_ident/: index.md
docs/unicode_linebreak/: index.md
docs/unicode_normalization/: index.md
docs/unicode_width/: index.md
docs/unit_prefix/: index.md
docs/untrusted/: index.md
docs/ureq/: index.md
docs/ureq_proto/: index.md
docs/utf8/: index.md
docs/utf8parse/: index.md
docs/walkdir/: index.md
docs/webpki/: index.md
docs/webpki_roots/: index.md
docs/zeroize/: index.md
generated_docs/: SUMMARY.md
generated_docs/addr2line/: index.md
generated_docs/adler2/: index.md
generated_docs/aho_corasick/: index.md
generated_docs/allocator_api2/: index.md
generated_docs/anstream/: index.md
generated_docs/anstyle/: index.md
generated_docs/anstyle_parse/: index.md
generated_docs/anstyle_query/: index.md
generated_docs/backtrace/: index.md
generated_docs/backtrace_ext/: index.md
generated_docs/bitflags/: index.md
generated_docs/camino/: index.md
generated_docs/cargo_docs_md/: index.md
generated_docs/cargo_metadata/: index.md
generated_docs/cargo_platform/: index.md
generated_docs/castaway/: index.md
generated_docs/cfg_if/: index.md
generated_docs/clap/: index.md
generated_docs/clap_builder/: index.md
generated_docs/clap_derive/: index.md
generated_docs/clap_lex/: index.md
generated_docs/colorchoice/: index.md
generated_docs/compact_str/: index.md
generated_docs/console/: index.md
generated_docs/crossbeam_deque/: index.md
generated_docs/crossbeam_epoch/: index.md
generated_docs/crossbeam_utils/: index.md
generated_docs/docs_md/: index.md
generated_docs/either/: index.md
generated_docs/equivalent/: index.md
generated_docs/foldhash/: index.md
generated_docs/fs_err/: index.md
generated_docs/gimli/: index.md
generated_docs/hashbrown/: index.md
generated_docs/heck/: index.md
generated_docs/indicatif/: index.md
generated_docs/is_ci/: index.md
generated_docs/is_terminal_polyfill/: index.md
generated_docs/itoa/: index.md
generated_docs/libc/: index.md
generated_docs/linux_raw_sys/: index.md
generated_docs/memchr/: index.md
generated_docs/miette/: index.md
generated_docs/miette_derive/: index.md
generated_docs/miniz_oxide/: index.md
generated_docs/object/: index.md
generated_docs/once_cell/: index.md
generated_docs/owo_colors/: index.md
scripts/: analyze_write_calls.py  check_generated_docs.py  dump_type_info.py  find_blanket_impls.py  index.py  inspect_impl.py
source_docs/: Baseline.md
src/: error.rs  generator.rs  lib.rs  linker.rs  logger.rs  main.rs  parser.rs  types.rs  utils.rs
tests/: integration_tests.rs
(+2080 files in other folders)
