[package]
name = "docs_md"
version = "0.1.0"
edition = "2024"

[dependencies]
rustdoc-types = "0.57.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"

# Progress bars
indicatif = "0.18.3"

# Better filesystem error messages
fs-err = "3.2.0"

# Pattern matching for doc processing
regex = "1.12.2"

# Directory traversal
walkdir = "2.5.0"

# Relative path computation (replaces custom implementation)
pathdiff = "0.2.3"

[dev-dependencies]
# For testing with real crate JSON
tracing = "0.1.43"

# Snapshot testing
insta = "1.44.3"

# =============================================================================
# Build Profiles
# =============================================================================

[profile.dev]
# Faster incremental builds
incremental = true

[profile.dev.package."*"]
# Optimize dependencies even in dev mode for faster runtime
opt-level = 2

[profile.release]
# Maximum optimization
opt-level = 3

# Link-time optimization for smaller/faster binary
lto = "thin"

# Single codegen unit for better optimization (slower compile)
codegen-units = 1

# Strip symbols for smaller binary
strip = "symbols"

[profile.bench]
# Benchmarking profile
inherits = "release"
debug = true
