[package]
name = "docs_md"
version = "0.1.0"
edition = "2024"

[dependencies]
rustdoc-types = "0.57.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"

# Progress bars
indicatif = "0.18.3"

# Better filesystem error messages
fs-err = "3.2.0"

# Pattern matching for doc processing
regex = "1.12.2"

# Directory traversal
walkdir = "2.5.0"

# Relative path computation (replaces custom implementation)
pathdiff = "0.2.3"

# Parallel processing for multi-crate generation
rayon = "1.11.0"

# Unicode normalization for anchor slugification
unicode-normalization = "0.1.25"

# Zero-allocation HashMap lookups with raw_entry API
hashbrown = "0.16.1"

# Small string optimization (inline strings ≤24 bytes)
compact_str = "0.9.0"

# SIMD-accelerated JSON parsing (optional, enabled via 'simd-json' feature)
# Significantly faster for large rustdoc JSON files (10-50MB+)
# Uses AVX2/SSE4.2 on x86, falls back to native Rust on other platforms
# Note: Requires mutable input buffer for in-place parsing
simd-json = { version = "0.17.0", optional = true }

[features]
default = []
# Enable SIMD-accelerated JSON parsing for faster rustdoc JSON loading
# Recommended for large codebases where JSON files exceed 10MB
simd-json = ["dep:simd-json"]

[dev-dependencies]
# For testing with real crate JSON
tracing = "0.1.43"

# Snapshot testing
insta = "1.44.3"

# Benchmarking (divan is faster than criterion)
divan = "0.1.21"

[[bench]]
name = "benchmarks"
harness = false

# =============================================================================
# Build Profiles
# =============================================================================

[profile.dev]
# Faster incremental builds
incremental = true

[profile.dev.package."*"]
# Optimize dependencies even in dev mode for faster runtime
opt-level = 2

[profile.release]
# Maximum optimization
opt-level = 3

# Link-time optimization for smaller/faster binary
lto = "thin"

# Single codegen unit for better optimization (slower compile)
codegen-units = 1

# Strip symbols for smaller binary
strip = "symbols"

[profile.bench]
# Benchmarking profile
inherits = "release"
debug = true
