[package]
name = "docs_md"
version = "0.1.0"
edition = "2024"

[dependencies]
rustdoc-types = "0.57.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"

# Progress bars
indicatif = "0.18.3"

# Better filesystem error messages
fs-err = "3.2.0"

# Pattern matching for doc processing
regex = "1.12.2"

# Directory traversal
walkdir = "2.5.0"

# Relative path computation (replaces custom implementation)
pathdiff = "0.2.3"

# Parallel processing for multi-crate generation
rayon = "1.11.0"

# Unicode normalization for anchor slugification
unicode-normalization = "0.1.25"

# Zero-allocation HashMap lookups with raw_entry API
hashbrown = "0.16.1"

# Small string optimization (inline strings ≤24 bytes)
compact_str = "0.9.0"

# SIMD-accelerated JSON parsing (optional, enabled via 'simd-json' feature)
# NOTE: Benchmarks show serde_json is actually 1.7x FASTER for typed deserialization
# (5.6ms vs 9.6ms). simd-json excels at raw Value parsing but the serde compatibility
# layer adds overhead. NOT RECOMMENDED - kept for experimentation only.
simd-json = { version = "0.17.0", optional = true }

# Structured logging for debugging
# release_max_level_info compiles out trace!/debug! in release builds (zero overhead)
tracing = { version = "0.1.43", features = ["release_max_level_info"] }
# tracing-subscriber is optional - only needed when the 'trace' feature is enabled
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"], optional = true }

[features]
default = []
# Enable SIMD-accelerated JSON parsing (NOT RECOMMENDED - see benchmarks)
# Benchmarks show serde_json is faster for typed struct deserialization
simd-json = ["dep:simd-json"]
# Enable CLI logging options (--log-level, --log-file)
trace = ["dep:tracing-subscriber"]

[dev-dependencies]
# For testing with real crate JSON
tracing = "0.1.43"

# Snapshot testing
insta = "1.44.3"

# Benchmarking (divan is faster than criterion)
divan = "0.1.21"

[[bench]]
name = "benchmarks"
harness = false

# =============================================================================
# Build Profiles
# =============================================================================

[profile.dev]
# Faster incremental builds
incremental = true

[profile.dev.package."*"]
# Optimize dependencies even in dev mode for faster runtime
opt-level = 2

[profile.release]
# Maximum optimization
opt-level = 3

# Link-time optimization for smaller/faster binary
lto = "thin"

# Single codegen unit for better optimization (slower compile)
codegen-units = 1

# Strip symbols for smaller binary
strip = "symbols"

[profile.bench]
# Benchmarking profile
inherits = "release"
debug = true
